fix: tornar origens CORS configuráveis via variável de ambiente
Substitui a origem hardcoded (localhost:5173) por uma propriedade
lida do application.yaml, permitindo configurar múltiplas origens
separadas por vírgula via CORS_ALLOWED_ORIGINS.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>